--- a/index.html
+++ b/index.html
@@ -2,109 +2,290 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Iceland Road Map with Cameras & Weather</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Leaflet CSS -->
+  <title>Iceland Road Conditions Map with Cameras & Weather</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- MapLibre GL CSS -->
   <link
+    href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css"
     rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
   />
   <style>
-    html, body, #map {
-      height: 100%;
-      margin: 0;
-      padding: 0;
+    body { margin: 0; padding: 0; }
+    #iceland-map { width: 100%; height: 100vh; }
+    .maplibregl-popup-content {
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      border-radius: 8px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.2);
+      padding: 12px 16px;
+      max-width: 280px;
+      font-size: 1rem;
+      line-height: 1.4;
     }
-    .weather-icon {
-      font-size: 24px;
-      line-height: 24px;
+    .maplibregl-popup-tip { border-top-color: #fff; }
+    .popup-header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 8px;
+    }
+    .status-icon {
+      font-size: 1.5em;
+      margin-right: 8px;
+    }
+    .popup-row {
+      margin: 6px 0;
+    }
+    .popup-row strong {
+      display: inline-block;
+      width: 70px;
     }
   </style>
 </head>
 <body>
-  <div id="map"></div>
+  <div id="iceland-map"></div>
 
-  <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <!-- MapLibre GL JS -->
+  <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
   <script>
-    // 1) Initialize map
-    const map = L.map('map').setView([64.0, -19.0], 6);
+    const map = new maplibregl.Map({
+      container: 'iceland-map',
+      style: {
+        version: 8,
+        sources: {
+          maptiler: {
+            type: 'vector',
+            url: 'https://api.maptiler.com/tiles/v3/tiles.json?key=a3sOp8tuMrNynToqbxXE'
+          }
+        },
+        layers: [
+          { id: 'background', type: 'background', paint: { 'background-color': '#ffffff' } },
+          { id: 'water', type: 'fill', source: 'maptiler', 'source-layer': 'water', paint: { 'fill-color': '#aee6f9' } },
+          {
+            id: 'major-roads',
+            type: 'line',
+            source: 'maptiler',
+            'source-layer': 'transportation',
+            filter: [
+              'all',
+              ['!=', 'class', 'ferry'],
+              ['in', 'class', 'motorway', 'trunk', 'primary']
+            ],
+            paint: {
+              'line-color': '#CCCCCC',
+              'line-width': ['interpolate', ['linear'], ['zoom'], 0, 1, 5, 2, 10, 4, 14, 8]
+            }
+          }
+        ]
+      },
+      center: [-19.02, 64.96],
+      zoom: 5.3
+    });
 
-    // 2) Basemap: Vegagerðin tiles
-    L.tileLayer(
-      'https://gagnaveita.vegagerdin.is/arcgis/rest/services/Umferdin/MapServer/tile/{z}/{y}/{x}', {
-        attribution: '&copy; Vegagerðin &amp; Landmælingar Íslands',
-        maxZoom: 18
+    map.addControl(new maplibregl.NavigationControl());
+    map.addControl(new maplibregl.GeolocateControl({
+      positionOptions: { enableHighAccuracy: true },
+      trackUserLocation: true,
+      showUserHeading: true
+    }), 'top-left');
+    map.setMaxBounds([[-30, 62], [-10, 67]]);
+
+    // ---- Road Conditions ----
+    const levels = [
+      { id: 'low',  layer: 21, minzoom: 0,  maxzoom: 6  },
+      { id: 'mid',  layer: 22, minzoom: 5,  maxzoom: 11 },
+      { id: 'high', layer: 23, minzoom: 10 }
+    ];
+
+    levels.forEach(({ id, layer, minzoom, maxzoom }) => {
+      map.addSource(`rc-src-${id}`, {
+        type: 'geojson',
+        data: { type: 'FeatureCollection', features: [] }
+      });
+      map.addLayer({
+        id: `rc-${id}-lines`,
+        type: 'line',
+        source: `rc-src-${id}`,
+        minzoom,
+        ...(maxzoom !== undefined ? { maxzoom } : {}),
+        paint: {
+          'line-color': [
+            'match', ['get','ASTAND_YFIRBORD'],
+            'EKKI_I_THJONUSTU','#9C9C9C','FAERT_FJALLABILUM','#03DF30',
+            'SNJOTHEKJA','#FFFFFF','HALKA','#00B7FF','LOKAD','#FF0000',
+            'HALKUBLETTIR','#FCA433','KRAP','#9C9C9C','OFAERT_ANNAD','#FF0000',
+            'OFAERT_VEDUR','#FF0000','OTHEKKT','#9C9C9C','FLUGHALT','#0000FF',
+            'GREIDFAERT','#00DF30','THAEFINGUR','#FD7EFC','THUNGFAERT','#3F3F3F',
+            '#000000'
+          ],
+          'line-width': [
+            'match', ['get','ASTAND_YFIRBORD'],
+            'EKKI_I_THJONUSTU', 1,
+            2
+          ]
+        }
+      });
+      // invisible wide line for easier clicking
+      map.addLayer({
+        id: `rc-${id}-clicklines`,
+        type: 'line',
+        source: `rc-src-${id}`,
+        paint: {
+          'line-color': 'rgba(0,0,0,0)',
+          'line-width': 20
+        }
+      });
+    });
+
+    async function fetchAllFeatures(layerId) {
+      const base = `https://vegasja.vegagerdin.is/arcgis/rest/services/appfaerd/faerd1_2/MapServer/${layerId}/query?where=1%3D1&outFields=NRVEGUR,ASTAND_YFIRBORD&outSR=4326&f=geojson&resultRecordCount=1000`;
+      let all = [], offset = 0, more = true;
+      while (more) {
+        const res = await fetch(base + `&resultOffset=${offset}`);
+        const json = await res.json();
+        all.push(...json.features);
+        more = json.exceededTransferLimit;
+        offset += json.features.length;
       }
-    ).addTo(map);
+      return { type: 'FeatureCollection', features: all };
+    }
 
-    // 3) Cameras
-    const cameraIcon = L.icon({
-      iconUrl: 'https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/svg/camera-outline.svg',
-      iconSize: [32, 32],
-      iconAnchor: [16, 16]
-    });
-
-    fetch('https://gagnaveita.vegagerdin.is/api/vefmyndavelar2014_1')
-      .then(res => res.json())
-      .then(data => {
-        // Data might be array or { features: [...] }
-        const cams = Array.isArray(data) ? data : (data.features || data);
-        cams.forEach(cam => {
-          const lon = parseFloat(cam.Longitude ?? cam.Lon ?? cam.LONG);
-          const lat = parseFloat(cam.Latitude ?? cam.Lat ?? cam.LAT);
-          if (isNaN(lat) || isNaN(lon)) return;
-
-          const marker = L.marker([lat, lon], { icon: cameraIcon }).addTo(map);
-          const popup = `
-            <strong>Cam #${cam.Maelist_nr}</strong><br/>
-            ${cam.Skyring || ''}<br/>
-            <a href="${cam.Slod}" target="_blank">View image</a>
-          `;
-          marker.bindPopup(popup);
+    function refreshRoadConditions() {
+      levels.forEach(({ id, layer }) => {
+        fetchAllFeatures(layer).then(fc => {
+          map.getSource(`rc-src-${id}`).setData(fc);
         });
-      })
-      .catch(console.error);
+      });
+    }
+    refreshRoadConditions();
+    setInterval(refreshRoadConditions, 60000);
 
-    // 4) Weather stations
-    const weatherIcon = L.divIcon({
-      className: 'weather-icon',
-      html: '🌡️',
-      iconSize: [24, 24],
-      iconAnchor: [12, 12]
+    // ---- Popups for Road Conditions ----
+    const statusInfo = {
+      SNJOTHEKJA: { icon:'❄️', label:'Snow' },
+      HALKA:       { icon:'🧊', label:'Slippery' },
+      LOKAD:       { icon:'⛔️', label:'Closed' },
+      FAERT_FJALLABILUM:{icon:'🚙',label:'4×4 Only'},
+      GREIDFAERT:  { icon:'🛣️',label:'Passable' },
+      HALKUBLETTIR:{ icon:'⚠️',label:'Icy Patches' },
+      FLUGHALT:    { icon:'✈️',label:'Airport Halted' },
+      KRAP:        { icon:'🧊',label:'Slush' },
+      OFAERT_ANNAD:{ icon:'🚫',label:'Other Closure' },
+      OFAERT_VEDUR:{ icon:'🌧️',label:'Weather Closure' },
+      OTHEKKT:     { icon:'❓',label:'Unknown' },
+      THAEFINGUR:  { icon:'🌫️',label:'Fog' },
+      THUNGFAERT:  { icon:'🐌',label:'Heavy Traffic' }
+    };
+    const clickLayers = levels.map(l => `rc-${l.id}-clicklines`);
+    clickLayers.forEach(id => {
+      map.on('mouseenter', id, () => map.getCanvas().style.cursor = 'pointer');
+      map.on('mouseleave', id, () => map.getCanvas().style.cursor = '');
+      map.on('click', id, e => {
+        const p = e.features[0].properties;
+        const info = statusInfo[p.ASTAND_YFIRBORD] || { icon:'ℹ️',label:p.ASTAND_YFIRBORD };
+        new maplibregl.Popup({ offset:12 })
+          .setLngLat(e.lngLat)
+          .setHTML(`
+            <div class="popup-header">
+              <span class="status-icon">${info.icon}</span>
+              <strong>Road ${p.NRVEGUR}</strong>
+            </div>
+            <div class="popup-row">
+              <strong>Status:</strong> ${info.label}
+            </div>
+          `)
+          .addTo(map);
+      });
     });
 
+    // ---- Cameras ----
+    map.addSource('cameras', { type:'geojson', data:{ type:'FeatureCollection', features:[] } });
+    map.loadImage('https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/svg/camera-outline.svg', (err, img) => {
+      if (err) return console.error(err);
+      map.addImage('camera-icon', img);
+      map.addLayer({
+        id: 'camera-points',
+        type: 'symbol',
+        source: 'cameras',
+        layout: {
+          'icon-image': 'camera-icon',
+          'icon-size': 0.5,
+          'icon-allow-overlap': true
+        }
+      });
+      fetch('https://gagnaveita.vegagerdin.is/api/vefmyndavelar2014_1')
+        .then(res => res.json())
+        .then(data => {
+          const cams = Array.isArray(data) ? data : data.features;
+          const features = cams.map(cam => ({
+            type: 'Feature',
+            geometry: {
+              type: 'Point',
+              coordinates: [
+                parseFloat(cam.Longitude||cam.Lon||cam.LONG),
+                parseFloat(cam.Latitude||cam.Lat||cam.LAT)
+              ]
+            },
+            properties: cam
+          }));
+          map.getSource('cameras').setData({ type:'FeatureCollection', features });
+        })
+        .catch(console.error);
+    });
+    map.on('click','camera-points', e => {
+      const props = e.features[0].properties;
+      new maplibregl.Popup({ offset:12 })
+        .setLngLat(e.lngLat)
+        .setHTML(`
+          <strong>Cam #${props.Maelist_nr}</strong><br/>
+          ${props.Skyring||''}<br/>
+          <a href="${props.Slod}" target="_blank">View image</a>
+        `)
+        .addTo(map);
+    });
+
+    // ---- Weather Stations ----
+    map.addSource('weather', { type:'geojson', data:{ type:'FeatureCollection', features:[]} });
+    map.addLayer({
+      id: 'weather-points',
+      type: 'symbol',
+      source: 'weather',
+      layout: {
+        'text-field': '🌡️',
+        'text-size': 24,
+        'text-allow-overlap': true
+      }
+    });
     fetch('https://xmlweather.vedur.is/?op_w=xml&view=stations&format=json')
       .then(res => res.json())
       .then(data => {
-        const stations = data.stations || data.results || [];
-        stations.forEach(st => {
-          const lon = parseFloat(st.lon);
-          const lat = parseFloat(st.lat);
-          if (isNaN(lat) || isNaN(lon)) return;
-
-          const marker = L.marker([lat, lon], { icon: weatherIcon }).addTo(map);
-          marker.on('click', async () => {
-            try {
-              const resp = await fetch(
-                `https://xmlweather.vedur.is/?op_w=xml&view=obs&ids=${st.id}&format=json`
-              );
-              const json = await resp.json();
-              const obs = (json.results && json.results[0]) || json;
-              const content = `
-                <strong>${obs.name}</strong><br/>
-                🌡 Temp: ${obs.T} °C<br/>
-                💧 Dew: ${obs.TD} °C<br/>
-                💨 Wind: ${obs.FG} m/s
-              `;
-              marker.bindPopup(content).openPopup();
-            } catch (err) {
-              console.error(err);
-            }
-          });
-        });
+        const sts = data.stations||data.results||[];
+        const features = sts.map(st => ({
+          type:'Feature',
+          geometry:{ type:'Point', coordinates:[parseFloat(st.lon),parseFloat(st.lat)] },
+          properties: st
+        }));
+        map.getSource('weather').setData({ type:'FeatureCollection', features });
       })
       .catch(console.error);
+    map.on('click','weather-points', async e => {
+      const sid = e.features[0].properties.id;
+      try {
+        const resp = await fetch(`https://xmlweather.vedur.is/?op_w=xml&view=obs&ids=${sid}&format=json`);
+        const json = await resp.json();
+        const obs = (json.results && json.results[0])||json;
+        new maplibregl.Popup({ offset:12 })
+          .setLngLat(e.lngLat)
+          .setHTML(`
+            <strong>${obs.name}</strong><br/>
+            🌡 Temp: ${obs.T} °C<br/>
+            💧 Dew: ${obs.TD} °C<br/>
+            💨 Wind: ${obs.FG} m/s
+          `)
+          .addTo(map);
+      } catch(err) {
+        console.error(err);
+      }
+    });
   </script>
 </body>
 </html>
